Video fixed for adaptive. Overflow fix

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -10,6 +10,9 @@ body {
     // typography
     font-family: $mainFont;
     font-size: 16px;
+
+    // visual
+    overflow-x: hidden;
 }
 
 main {
